scss/partials/_navigation_sidebar.scss
@mixin default-item(){
  background-color: transparent;
  height: 34px;
  padding-top: 6px;

  @include mobile() {
    height: 40px;
    margin: 2px 0;
    padding: 7px 16px;
  }

  .internal {
    @include OC_Body_Book();
    font-size: 14px;
    color: $deep_navy;
    text-decoration: none;

    &.new {
      @include OC_Body_Bold();
    }

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }
  }

  span.count {
    float: right;
    @include OC_Body_Book();
    font-size: 12px;
    line-height: 16px;
    text-align: center;
    color: $deep_navy;
    width: 16px;
    height: 16px;
    display: inline-block;
    background-color: rgba($light_navy, 0.1);
    border-radius: 4px;
    margin-top: 4px;
    margin-right: 16px;

    @include mobile() {
      float: left;
      margin-top: 9px;
      margin-left: 8px;
    }
  }

  div.drafts-label {
    @include OC_Body_Book();
    font-size: 14px;
    color: $deep_navy;
    text-decoration: none;

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }
  }

  &:active, &:focus {
    text-decoration: none;

    div.all-posts-label, div.follow-ups-label, div.must-see-label, div.drafts-label {
      text-decoration: none;
    }
  }

  div.all-posts-label {
    @include OC_Body_Book();
    font-size: 14px;
    color: $deep_navy;
    text-decoration: none;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }

    &:active, &:focus {
      text-decoration: none;
    }

    &.new {
      @include OC_Body_Bold();
      color: $deep_navy;
    }
  }

  div.follow-ups-label {
    @include OC_Body_Book();
    font-size: 14px;
    color: $deep_navy;
    text-decoration: none;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }

    &:active, &:focus {
      text-decoration: none;
    }

    &.new {
      @include OC_Body_Bold();
    }
  }

  div.must-see-label {
    @include OC_Body_Bold();
    font-size: 14px;
    color: $deep_navy;
    text-decoration: none;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }

    &:active, &:focus {
      text-decoration: none;
    }

    &.new {
      @include OC_Body_Bold();
    }
  }
}

@mixin item-selected() {
  background-color: $grey_num_2;
  outline: none;

  @include mobile() {
    background-color: $carrot_green;
  }

  .internal, div.all-posts-label, div.follow-ups-label, div.drafts-label, div.must-see-label {
    // color: $carrot_green;
    @include OC_Body_Bold();
    font-size: 14px;
    text-decoration: none;

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }

    span.count {
      color: $carrot_green;
    }

    @include mobile() {
      color: white;
    }
  }

  @include mobile() {
    span.count {
      background-color: rgba(white, 0.1);
      color: white;
    }
  }

  div.all-posts-label, div.follow-ups-label, div.drafts-label, div.must-see-label {
    font-size: 14px;
    text-decoration: none;

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }
  }

  &:active, &:focus {
    text-decoration: none;

    div.all-posts-label, div.follow-ups-label, div.must-see-label, div.drafts-label {
      text-decoration: none;
    }
  }

  div.all-posts-label, div.follow-ups-label, div.must-see-label {
    @include OC_Body_Bold();
    text-decoration: none;

    &:active, &:focus {
      text-decoration: none;
    }
  }
}

@mixin item-hover(){
  background-color: $grey_num_2;
  outline: none;
  text-decoration: none;
  -webkit-tap-highlight-color: $grey_num_2;

  @include mobile() {
    background-color: transparent;
  }

  .internal {
    @include OC_Body_Book();
    font-size: 14px;
    color: $deep_navy;
    text-decoration: none;

    @include mobile() {
      font-size: 16px;
      line-height: 24px;
    }

    &.new {
      @include OC_Body_Bold();
    }
  }

  div.all-posts-label, div.follow-ups-label, div.drafts-label, div.must-see-label {
    color: $deep_navy;
    text-decoration: none;

    &:active, &:focus {
      text-decoration: none;
    }

    &.new {
      @include OC_Body_Bold();
    }
  }
}
/* ... */

