Fix navigation sidebar counter position on mobile.

--- a/scss/partials/_navigation_sidebar.scss
+++ b/scss/partials/_navigation_sidebar.scss
@@ -42,7 +42,7 @@
 
     @include mobile() {
       float: left;
-      margin-top: 9px;
+      margin-top: 5px;
       margin-left: 8px;
     }
   }
